correction on mobile view.

--- a/artisans-html/src/components/pages/results/List/list.css
+++ b/artisans-html/src/components/pages/results/List/list.css
@@ -23,3 +23,9 @@
     justify-content: space-around;
 }
 
+
+#list-container-panel > .help-container {
+    display: flex;
+    justify-content: center;
+}
+
